fix: align @Fork JVM args between FFM and JNI benchmarks
Both forked JVMs now get identical flags:
  --enable-native-access=ALL-UNNAMED
  --sun-misc-unsafe-memory-access=allow

Previously FFM had the first flag and JNI had neither, so the two
benchmark forks were running in different JVM environments.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>